[gd_scene load_steps=4 format=3 uid="uid://hud_001"]

[ext_resource type="Script" path="res://src/ui/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0.15, 0.05, 0.05, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(1, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_hud")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="HealthBar" type="ProgressBar" parent="Container/TopBar"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="XPBar" type="ProgressBar" parent="Container/TopBar"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
max_value = 10.0
value = 0.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="Container/TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Lv.1"

[node name="Spacer" type="Control" parent="Container/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="Container/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0:00"

[node name="KillsLabel" type="Label" parent="Container/TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "0 kills"

[node name="ComboContainer" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 160.0
grow_horizontal = 0

[node name="ComboLabel" type="Label" parent="Container/ComboContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 2

[node name="ComboText" type="Label" parent="Container/ComboContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 2
